<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestIHM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_fragment_list">FragmentList</string>
    <string name="text_empty"></string>
    <string name="title_activity_options_frag">OptionsFrag</string>
    <string name="title_activity_options_fragment">OptionsFragment</string>
    <string name="title_activity_add_location_storage">AddLocationStorage</string>
    <string name="title_activity_detailed_location_storage">DetailedLocationStorage</string>
    <string name="add_storage_location">Add a new storage location</string>
    <string name="returnButton">Return</string>
    <string name="online_cloud">Online cloud</string>
    <string name="webdav_server">Webdav server</string>
    <string name="instruction_typeChoice">Please, choose a type of server</string>
    <string name="detailed_information">Detailed information</string>
    <string name="deleteButton">Delete</string>
    <string name="downloadButton">Download a file</string>
    <string name="uploadButton">Upload a file</string>
    <string name="title_activity_upload2">Upload2</string>
    <string name="title_activity_config_upload">ConfigUploadActivity</string>
    <string name="messageChoiceNbPackets">How many packets do you want to create?</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="alert_message_add_location_storage">Please, enter a valid name</string>
    <string name="alert_title_add_location_storage">Invalid cloud name</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="messageSending"> In Progress. Please wait...</string>
    <string name="messageDownloading"> In Progress. Please wait...</string>
</resources>
